# cours_cuda

bugs/: CMakeLists.txt  compile_commands.json  run.sh
bugs/src/: kernel.cu
julia/: CMakeLists.txt  run.sh
julia/src/: kernel.cu
kmeans/src/: camera.c  camera.h  kernel.cu
nbody/: CMakeLists.txt  run.sh
nbody/src/: camera.c  camera.h  nbody.cu
raytracing/: CMakeLists.txt  run.sh
raytracing/src/: kernel.cu
